Filling out MDX resume some more

--- a/pages/posts/resume.mdx
+++ b/pages/posts/resume.mdx
@@ -4,21 +4,21 @@
 
 ## Summary Statement
 
-#### Hello and thank you for viewing my website resume!
+#### Hello and thank you for viewing my Website Resume!
 
 I have had a long involvment and interest in computers and technology. My current interests and work aspirations revolve around React and Nextjs for static site generation and api consumption. I enjoy learning and trying new things to solve interesting problems!
 
-## Education
+#### Education
 
 ---
 
-###### School
+##### Schooling
 
-- Bachelor's of Software Development (completing August 2021)
-- Associates of Science - Germanna Community College (Virginia - 2013)
-- Electrical Engineering - Virginia Commonwealth Univerisy (35 credits, did not complete - 2012)
+- ###### Bachelors in Software Development (Online - completing August 2021)
+- ###### Associates in Science - Germanna Community College (Virginia - 2013)
+- ###### Electrical Engineering - Virginia Commonwealth University (35 credits, did not complete - 2012)
 
-###### Certifications
+##### Certifications
 
 [Orancle SQL (2021)](https://education.oracle.com/oracle-database-sql-certified-associate/trackp_457)
 [Advanced HTML5 adn CSS3 Specialist (2019)](https://www.ciwcertified.com/ciw-certifications/web-and-mobile-design-series/advanced-html5-and-css3-specialist/course-description)
@@ -28,19 +28,45 @@ I have had a long involvment and interest in computers and technology. My curren
 [CompTIA - A+ (2016)](https://www.comptia.org/certifications/a)
 [Cisco CCENT (2013)](https://www.cisco.com/c/en/us/training-events/training-certifications/certifications/entry/technician-cct.html)
 
-## Work Experience
+#### Development Experience
 
-### System Test Engineer (2019 - Present)
+- Demonstrated experience with HTML5, CSS, JavaScript (React & SSG with Nextjs), Java, Git, SQL (Oracle & Postgres), Python, Node.
+- Experience extracting and transforming data using SQL and Posgres.
+- Experience with React and has knowledge of CSS/SASS precompilation methods.
+- Experience in consuming REST APIs and rendering into pages dynamically.
+- Experience with responsive and adaptive design and understand importance of visual and accessibility design principles.
+- Communication of technical value internally and customer facing. Including briefings (oral and written), white papers, and reports.
+- 7 years experience testing and delivering complex hardware and software systems.
+- Experience with unit, acceptance, functional and regression testing.
+- Develop code using various programming and scripting languages, mainly JavaScript, Java and Python.
+- Experience in a professional Agile environment.
+- Multiple years of professional experience in an engineering evironment.
+- Utilize a variety of markup languages to write UIs and web pages.
+- Experience with continuous deployment and working in fast paced environments.
 
-### Senior Quality Assurance Engineer (2017 - 2019)
+#### Work Experience
 
-### Qualtiy Assurance Engineer (2014 - 2017)
+- ##### System Test Engineer (2019 - Present)
+- Functional, system integration, user acceptance and pre-production testing for multiple Bluetooth, Wi-Fi, and Zigbee products.
+- Automate system and UI tests where warrented.
+- Assist engineering leads with organizing and prioritizing sprint goals and metrics to track through release.
+- Collaborate and synchronize between QA and engineering using a variety of devops tools: Jira, Confluence, Collaborator, Git, SVN, MS Office, etc.
+- ##### Senior Quality Assurance Engineer (2017 - 2019)
+- Research problems, identify a root cause, recommend and implement a solution. Mentor others on how to do the same.
+- Manual and automated testing hardware and software testing. Black box, grey box functional, UI and pre-production.
+- Provide root cause analysis of defects by analyzing protocol specificaitons and reporting compliance errors.
+- Organize and summarize test results into many formats including pivot tables, charts/plots, burndowns, etc.
+- ##### Qualtiy Assurance Engineer (2014 - 2017)
+- Document and maintain lists of defects found inconsistent with TCP/IP, Bluetooth and 802.11 protocol and/or UI requirements of the front end applications.
+- Provide verbal and written test result description summaries to direct report for escalation and analysis by senior QA team members.
+- ##### Quality Assurance Technician (2013 - 2014)
+- Manual QA testing of various Wi-Fi and Bluetooth enabled devices.
+- Report suspected improvements in test plans or strategy to mentors.
 
-### Quality Assurance Technician (2013 - 2014)
+#### Skills or Accomplishments
 
-## Skills or Accomplishments
-
-- Successfully created and launched my SSG website using Nextjs and MDX for markdown blogging
-- Very dependable and hardworking learner
-- Deeply involved in multiple successful product launches in the Bluetooth and Wi-Fi space very the past few years.
-- Last but far from least - A father, who loves nothing more! I am commited to leading by example in everything I pursue.
+- ###### Successfully created and launched my SSG website using Nextjs and MDX for markdown blogging
+- ###### Very dependable, proactive and fast learner with attention to detail
+- ###### Deeply involved in multiple successful product launches in the Bluetooth and Wi-Fi space very the past few years.
+- ###### Aptitude for picking up technology quickly along with a desire to learn and progress.
+- ###### Last but far from least - A father that loves nothing more! I am commited to leading by example in everything I pursue until the end of my time.
