More styling, tinkering with final layout and look

--- a/pages/posts/resume.mdx
+++ b/pages/posts/resume.mdx
@@ -4,19 +4,19 @@
 
 ## Summary Statement
 
-#### Hello and thank you for viewing my Website Resume!
+##### Hello and thank you for viewing my Website Resume!
 
-I have had a long involvment and interest in computers and technology. My current interests and work aspirations revolve around React and Nextjs for static site generation and api consumption. I enjoy learning and trying new things to solve interesting problems!
+I have always had a passion for computers and technology. My current interests and work aspirations revolve around React development (Javascript / HTML / CSS). Currently I'm loving NextJS for static site generation and api consumption! I enjoy learning and trying new things to solve interesting problems!
 
 #### Education
 
 ---
 
-##### Schooling
+##### School
 
-- ###### Bachelors in Software Development (Online - completing August 2021)
-- ###### Associates in Science - Germanna Community College (Virginia - 2013)
-- ###### Electrical Engineering - Virginia Commonwealth University (35 credits, did not complete - 2012)
+- Bachelors in Software Development (Online - completing August 2021)
+- Associates in Science - Germanna Community College (Virginia - 2013)
+- Electrical Engineering - Virginia Commonwealth University (35 credits, did not complete - 2012)
 
 ##### Certifications
 
@@ -31,6 +31,7 @@ I have had a long involvment and interest in computers and technology. My curren
 #### Development Experience
 
 - Demonstrated experience with HTML5, CSS, JavaScript (React & SSG with Nextjs), Java, Git, SQL (Oracle & Postgres), Python, Node.
+
 - Experience extracting and transforming data using SQL and Posgres.
 - Experience with React and has knowledge of CSS/SASS precompilation methods.
 - Experience in consuming REST APIs and rendering into pages dynamically.
@@ -63,10 +64,10 @@ I have had a long involvment and interest in computers and technology. My curren
 - Manual QA testing of various Wi-Fi and Bluetooth enabled devices.
 - Report suspected improvements in test plans or strategy to mentors.
 
-#### Skills or Accomplishments
+#### Skills and Accomplishments
 
-- ###### Successfully created and launched my SSG website using Nextjs and MDX for markdown blogging
-- ###### Very dependable, proactive and fast learner with attention to detail
-- ###### Deeply involved in multiple successful product launches in the Bluetooth and Wi-Fi space very the past few years.
-- ###### Aptitude for picking up technology quickly along with a desire to learn and progress.
-- ###### Last but far from least - A father that loves nothing more! I am commited to leading by example in everything I pursue until the end of my time.
+- Successfully created and launched my statically generated website! Nextjs and MDX for creating markdown pages (link this Resume page) and future blogging.
+- Very dependable, proactive and fast learner with attention to detail.
+- Deeply involved in multiple successful product launches in the Bluetooth and Wi-Fi space very the past few years.
+- Aptitude for picking up technology quickly along with a desire to learn and progress.
+- Last but far from least - A father that loves nothing more! I am commited to leading by example in everything I pursue until the end of my time.
