Adding transitions to home page, more content filling

--- a/pages/data/blog/resume.mdx
+++ b/pages/data/blog/resume.mdx
@@ -1,52 +1,40 @@
-# Resume
+import Certifications from "../../../components/Certifications";
 
+## Resume
 ---
-
-## Summary Statement
 
 ##### Hello and thank you for viewing my Website Resume!
 
 I have always had a passion for computers and technology. My current interests and work aspirations revolve around React development (Javascript / HTML / CSS). Currently I'm loving NextJS for static site generation and api consumption! I enjoy learning and trying new things to solve interesting problems!
 
-#### Education
-
----
-
 ##### School
+---
 
 - Bachelors in Software Development (Online - completing August 2021)
 - Associates in Science - Germanna Community College (Virginia - 2013)
 - Electrical Engineering - Virginia Commonwealth University (35 credits, did not complete - 2012)
 
 ##### Certifications
+---
+<Certifications/>
 
-[Orancle SQL (2021)](https://education.oracle.com/oracle-database-sql-certified-associate/trackp_457)
-[Advanced HTML5 adn CSS3 Specialist (2019)](https://www.ciwcertified.com/ciw-certifications/web-and-mobile-design-series/advanced-html5-and-css3-specialist/course-description)
-[User Interface Design (2019)](https://education.oracle.com/oracle-database-sql-certified-associate/trackp_457)
-[Website Design Associate (2018)](https://ciwcertified.com/ciw-certifications/web-and-mobile-design-series/user-interface-designer)
-[CompTIA - Project+ (2016)](https://www.comptia.org/certifications/project)
-[CompTIA - A+ (2016)](https://www.comptia.org/certifications/a)
-[Cisco CCENT (2013)](https://www.cisco.com/c/en/us/training-events/training-certifications/certifications/entry/technician-cct.html)
-
-#### Development Experience
-
-- Demonstrated experience with HTML5, CSS, JavaScript (React & SSG with Nextjs), Java, Git, SQL (Oracle & Postgres), Python, Node.
-
-- Experience extracting and transforming data using SQL and Posgres.
-- Experience with React and has knowledge of CSS/SASS precompilation methods.
+##### Development Experience
+---
+- Demonstrated experience in JavaScript, HTML5, CSS (React), Java, Git, SQL (Oracle & Postgres), Python, Node.
+- Experience extracting and transforming data using Oracle SQL and Posgres.
+- Experience developing in React, SASS/SCSS precompilation, NextJS, Material-UI, Semantic-UI MDX-remote, styled components.
 - Experience in consuming REST APIs and rendering into pages dynamically.
 - Experience with responsive and adaptive design and understand importance of visual and accessibility design principles.
 - Communication of technical value internally and customer facing. Including briefings (oral and written), white papers, and reports.
 - 7 years experience testing and delivering complex hardware and software systems.
 - Experience with unit, acceptance, functional and regression testing.
-- Develop code using various programming and scripting languages, mainly JavaScript, Java and Python.
-- Experience in a professional Agile environment.
-- Multiple years of professional experience in an engineering evironment.
-- Utilize a variety of markup languages to write UIs and web pages.
-- Experience with continuous deployment and working in fast paced environments.
+- Experience with various programming and scripting languages including JavaScript, Java and Python, PHP, C#, batch and bash shell scripts.
+- Working experience in a professional Agile environment.
+- Utilizes a variety of markup languages to write UIs and web pages.
+- Experience with continuous deployment and working in a fast paced system.
 
-#### Work Experience
-
+##### Work Experience
+---
 - ##### System Test Engineer (2019 - Present)
 - Functional, system integration, user acceptance and pre-production testing for multiple Bluetooth, Wi-Fi, and Zigbee products.
 - Automate system and UI tests where warrented.
@@ -64,8 +52,8 @@ I have always had a passion for computers and technology. My current interests a
 - Manual QA testing of various Wi-Fi and Bluetooth enabled devices.
 - Report suspected improvements in test plans or strategy to mentors.
 
-#### Skills and Accomplishments
-
+##### Skills and Accomplishments
+---
 - Successfully created and launched my statically generated website! Nextjs and MDX for creating markdown pages (link this Resume page) and future blogging.
 - Very dependable, proactive and fast learner with attention to detail.
 - Deeply involved in multiple successful product launches in the Bluetooth and Wi-Fi space very the past few years.
